deployment/kustomize/overlays/common/ingress.yaml
#ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cv-mostashkin
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: mostashkin.dacdevops.ru
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cv-mostashkin
                port:
                  name: http
